--- a/css/legacy/etlib/lightbox.less
+++ b/css/legacy/etlib/lightbox.less
@@ -45,3 +45,6 @@
     .et_secondtier_lightbox_content .et_secondtier_lightbox_player { width: 520px; height: 315px; }
     /* on ipad, the video iframe height will be expanded to 341 when its actually height is set 315px */
     .ios .et_secondtier_lightbox_content .et_secondtier_lightbox_player { width: 520px; height: 341px; }
+
+
+.et_js_lightbox .et-button { font-size: 12px; }
